Name:                frpnow
Version:             0.18
Synopsis:	     Principled practical FRP
Description:         FRP with first-class behaviors and interalized IO, without space leaks
License:             BSD3
License-file:        LICENSE
Author:              Atze van der Ploeg
Maintainer:          atzeus@gmail.com
Homepage:            https://github.com/atzeus/FRPNow
Build-Type:          Simple
Cabal-Version:       >=1.6
Data-files:          ChangeLog
Category:            Control
Tested-With:         GHC==7.10.1
Library
  Build-Depends: base >= 2 && <= 6, mtl >= 1.0, containers, transformers
  Exposed-modules: Control.FRPNow,Control.FRPNow.Core, Control.FRPNow.Lib, Control.FRPNow.EvStream, Control.FRPNow.Time, Control.FRPNow.BehaviorEnd
  other-modules: Control.FRPNow.Private.PrimEv, Control.FRPNow.Private.Ref
  Extensions:	 RankNTypes, GADTs, CPP, EmptyDataDecls

source-repository head
    type:     git
    location: https://github.com/atzeus/FRPNow
